react build success

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -65,6 +65,7 @@
                 "--no-debugger",
                 "--no-reload"
             ],
+            "preLaunchTask":"vue_build",
             "envFile": "${workspaceRoot}/.env",
             "debugOptions": [
                 "WaitOnAbnormalExit",
