--- a/react_frontend/package.json
+++ b/react_frontend/package.json
@@ -10,7 +10,10 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "prebuild":"del ..\\backend\\templates\\index.html && rd /s /q ..\\backend\\static\\build",
+    "postbuild": "move build\\index.html ..\\backend\\templates\\ &&  move build ..\\backend\\static\\",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
-  }
+  },
+  "homepage": "/backend/static/build"
 }
