--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,11 +4,17 @@
     "version": "2.0.0",
     "tasks": [
         {
-            "type": "npm",
-            "identifier": "vue_build",
-            "script": "build",
-            "path": "react_frontend/",
-            "problemMatcher": []
+            "label": "Custom React Build",
+            "identifier": "react_build",
+            "type": "shell",
+            "windows": {
+                "command": ".\\react_frontend\\build.cmd"
+            },
+            "group": "build",
+            "presentation": {
+                "reveal": "always",
+                "panel": "new"
+            }
         }
     ]
 }
