--- a/react_frontend/package.json
+++ b/react_frontend/package.json
@@ -3,6 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "antd": "^3.8.1",
+    "eslint": "^5.3.0",
+    "eslint-config-defaults": "^9.0.0",
+    "eslint-plugin-react": "^7.11.0",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-scripts": "1.1.4"
@@ -10,7 +14,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "prebuild":"del ..\\backend\\templates\\index.html && rd /s /q ..\\backend\\static\\build",
+    "prebuild": "del ..\\backend\\templates\\index.html && rd /s /q ..\\backend\\static\\build",
     "postbuild": "move build\\index.html ..\\backend\\templates\\ &&  move build ..\\backend\\static\\",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
