1.首页框架搭建完成 2.flask加入蓝图便于模块化

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,9 +2,9 @@
     "python.pythonPath": "D:/Program Files/Python36/python",
     "python.formatting.provider": "yapf",
     "python.linting.pylintEnabled": false,
-    "python.linting.pydocstyleEnabled": false,
+    "python.linting.pydocstyleEnabled": true,
     "python.linting.enabled": true,
-    "python.linting.flake8Enabled": true,
+    "python.linting.flake8Enabled": false,
     "git.ignoreLimitWarning": true,
     "python.linting.pep8Enabled": false,
 }
