--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -14,7 +14,8 @@
             "presentation": {
                 "reveal": "always",
                 "panel": "new"
-            }
+            },
+            "problemMatcher": []
         }
     ]
 }
