--- a/react_frontend/package.json
+++ b/react_frontend/package.json
@@ -9,13 +9,14 @@
     "eslint-plugin-react": "^7.11.0",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "prebuild": "del ..\\backend\\templates\\index.html && rd /s /q ..\\backend\\static\\build",
-    "postbuild": "move build\\index.html ..\\backend\\templates\\ &&  move build ..\\backend\\static\\",
+    "postbuild": "move build\\*.html ..\\backend\\templates\\ &&  move build ..\\backend\\static\\",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
