--- a/react_frontend/package.json
+++ b/react_frontend/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "antd": "^3.8.1",
+    "crypto-js": "^3.1.9-1",
     "eslint": "^5.3.0",
     "eslint-config-defaults": "^9.0.0",
     "eslint-plugin-react": "^7.11.0",
