--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-    "python.pythonPath": "D:/Program Files/Python36/python",
+    "python.pythonPath": "${workspaceFolder}\\.venv\\Scripts\\python.exe",
     "python.formatting.provider": "yapf",
     "python.linting.pylintEnabled": false,
     "python.linting.pydocstyleEnabled": true,
