--- a/react_frontend/package.json
+++ b/react_frontend/package.json
@@ -8,6 +8,7 @@
     "eslint": "^5.3.0",
     "eslint-config-defaults": "^9.0.0",
     "eslint-plugin-react": "^7.11.0",
+    "jsencrypt": "^3.0.0-rc.1",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-router-dom": "^4.3.1",
@@ -16,8 +17,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "prebuild": "del ..\\backend\\templates\\index.html && rd /s /q ..\\backend\\static\\build",
-    "postbuild": "move build\\*.html ..\\backend\\templates\\ &&  move build ..\\backend\\static\\",
+    "postbuild": "del ..\\backend\\templates\\index.html && rd /s /q ..\\backend\\static\\build && move build\\*.html ..\\backend\\templates\\ &&  move build ..\\backend\\static\\",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
