--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,8 @@
 {
     "python.pythonPath": "${workspaceFolder}\\.venv\\Scripts\\python.exe",
     "python.formatting.provider": "yapf",
-    "python.linting.pylintEnabled": false,
-    "python.linting.pydocstyleEnabled": true,
+    "python.linting.pylintEnabled": true,
+    "python.linting.pydocstyleEnabled": false,
     "python.linting.enabled": true,
     "python.linting.flake8Enabled": false,
     "git.ignoreLimitWarning": true,
