--- a/react_frontend/package.json
+++ b/react_frontend/package.json
@@ -11,6 +11,7 @@
     "jsencrypt": "^3.0.0-rc.1",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
+    "react-loadable": "^5.5.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4"
   },
